# compiler-project

./: .gitignore  README.md  compiler.bat  compiler.sh  pyproject.toml  requirements.txt
src/compiler/: __main__.py  ast.py  parser.py  symbol_table.py  tokenizer.py  type_checker.py  types.py
tests/: integration_test.py  parse_block_test.py  parser_test.py  tokenizer_test.py  type_checker_test.py  typecheck_test.py
