[tool.poetry]
name = "compilers-project"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "compiler", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
mypy = "^1.7.0"
pytest = "^7.4.2"

[tool.poetry.scripts]
main = "compiler.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[virtualenvs]
prefer-active-python = true
